welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: ')' expected but ',' found.
  if(!weekday=true, vacation=true){
                  ^sleepIn:10: error: illegal start of simple expression
} 
^